Fix [Function panel] Resources overflows container (#849)

--- a/src/components/JobsPanel/jobsPanel.scss
+++ b/src/components/JobsPanel/jobsPanel.scss
@@ -30,6 +30,10 @@
         .panel-section__body {
           align-items: center;
         }
+
+        .select__value {
+          min-width: 120px;
+        }
       }
 
       .select {
